# ComfyUI-TP-OmnimatteZero

./: MPS_NOTES.md  README.md  nodes.py  omnimatte_impl.py  pyproject.toml  requirements.txt
workflows/: object_removal.json
